re PR bootstrap/52887 (Bootstrap on AIX failure: Undefined symbol: .std::function<void (std::__regex::_PatternCursor const&, std::__regex::_Results&)>::function(std::function<void (std::__regex::_PatternCursor const&, std::__regex::_Results&)> const&))

PR libstdc++/52887
	* src/c++11/regex.cc: Add instantiations for AIX.

From-SVN: r195258